manifests/ping-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping
  labels:
    app: ping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping 
  template:
    metadata:
      labels:
        app: ping 
    spec:
      serviceAccountName: ping-sa 
      containers:
      - name: ping-pong
        image: docker.io/irvnet/ping-pong-py:latest
        ports:
        - containerPort: 8000
