manifests/ping-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ping
  name: ping-svc
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: ping
  type: ClusterIP
