manifests/pong-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pong
  name: pong-svc
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: pong
  type: ClusterIP
